# Thesis-CV-System

./: .env.example  .gitignore  README.md
back/: README.md  predict_old.py  pyproject.toml
back/app/: main.py
back/app/core/: auth_deps.py  cloudinary_storage.py  config.py  constants.py  ml_client.py  ml_old.py  security.py  storage.py
back/app/db/: mongo.py
back/app/ml/: model.py
back/app/models/: feedback.py  game_answer.py  game_image.py  game_session.py  prediction.py  quiz.py  user.py
back/app/routers/: auth.py  games.py  images.py  predictions.py  quiz.py  sessions.py
back/app/services/: game_answers_service.py  game_images_service.py  game_sessions_service.py  predictions_service.py  quiz_service.py  users_service.py
back/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: auth.ts  games.ts  http.ts  images.ts  predictions.ts  sessions.ts
frontend/src/components/games/: Game1Round.vue  Game2Round.vue  Game3Round.vue  RoundProgress.vue  (+1 more)
frontend/src/composables/: useGame1.ts  useGame2.ts  useGame3.ts  useGameSession.ts
frontend/src/pages/: GamePage.vue  LoginPage.vue
frontend/src/router/: index.ts
frontend/src/services/: api.js
frontend/src/stores/: auth.ts
frontend/src/types/: game.ts
ml_service/: README.md  pyproject.toml
ml_service/app/: main.py  model.py
ml_service/cv2026_ml_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml_service/models/: best.pt
(+7 files in other folders)
