[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv2026-ml-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pillow>=10.0",
  "torch>=2.0",
  "torchvision>=0.15",
  "python-multipart>=0.0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["models*"]

[tool.uvicorn]
factory = false